--- a/capacitor/android/app/src/main/res/values/strings.xml
+++ b/capacitor/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main">bagami</string>
     <string name="package_name">com.bagami.app</string>
     <string name="custom_url_scheme">com.bagami.app</string>
+    <string name="default_web_client_id">679781905090-gik55c79ooptl4q4ontkdni95amgupnn.apps.googleusercontent.com</string>
 </resources>
